--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,5 +27,6 @@
 @import "home";
 @import "neural";
 @import "services";
-@import 'experties'
+@import 'experties';
+@import 'about-us';
 //       //
