--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -5,49 +5,35 @@
     justify-content: center;
 
     .cards-services {
-        width: 1540px;
-        padding-left: 65px;
-        padding-right: 25px;
+        width: 1360px;
+        padding-left: 30px;
+        padding-right: 30px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        margin-left: 65px;
+        justify-content: space-between;
 
         .card-services {
             display: flex;
             flex-direction: column;
             font-size: 20px;
-            margin-left: 65px;
-            margin-bottom: 50px;
+            padding: 0 20px;
             
+            > img {
+                width: 290px
+            }
             > span {
                 margin-top: 50px;
+                margin-bottom: 50px;
             }
         }
     }
 }
 
-@media only screen and (max-width: 1695px) {
-    .section-services {
-
-        .cards-services {
-            // margin: 0;
-        }
-    }
-}
 @media only screen and (max-width: 1729px) {
     .section-services {
-        $size-3: 404px;
         .cards-services {
-            padding-left: 0;
-            margin-left: 0;
-
             .card-services {
-                width: $size-3;
-                -moz-width: $size-3;
-                img {
-                    width: 100%
-                }
+
             }
         }
     }
@@ -55,7 +41,8 @@
 @media only screen and (max-width: 768px) {
     .section-services {
         .cards-services {
-            padding: 0;
+            padding: 0 30px;
+            justify-content: center;
             .card-services {
                 margin-left: 0;
             }
@@ -76,8 +63,8 @@
         }
     }
 }
-@media only screen and (max-height: 750px) { //height media 
-    .section-services {
-      padding-top: 25%;
-    }
-  }
+// @media only screen and (max-height: 750px) { //height media 
+//     .section-services {
+//       padding-top: 25%;
+//     }
+//   }
