--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -4,11 +4,12 @@
         width: 100%;
         height: 760px;
         background: url('../../assets/img/people.png') no-repeat center center fixed;
-        background-size: contain;
-        background-color: black;
+        background-size: auto;
         background-position: top;
+        background-color: black;
         margin-top: -60px;
         display: flex;
+        
 
         .text-gradient {
             width: 100%;
@@ -22,7 +23,9 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                margin-bottom: 120px;
+                margin-bottom: 100px;
+                @include padding-both;
+
                 > p {
                     max-width: 1060px;
                     font-family: 'Montserrat Bold';
@@ -49,7 +52,7 @@
             width: 1360px;
             display: flex;
             justify-content: space-between;
-            padding: 0 30px;
+            @include padding-both;
 
             .column {
                 max-width: 360px;
@@ -109,8 +112,7 @@
             width: 1360px;
             padding-top: 50px;
             padding-bottom: 150px;
-            padding-left: 30px;
-            padding-right: 30px;
+            @include padding-both;
 
             h1 {
                 font-size: 48px;
@@ -123,7 +125,7 @@
                 padding-top: 75px;
 
                 .person {
-                    padding: 0 10px;
+                    padding: 10px 10px;
                     
                     img {
                         margin-bottom: 30px;
@@ -140,6 +142,126 @@
                             font-size: 17px;
                             color: #757575;
                             margin-top: 15px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 930px) {
+    .about-us {
+        .three-columns {
+            .container-columns {
+                flex-wrap: wrap;
+    
+                .column:nth-child(2) { padding: 0 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 860px) {
+    .about-us {
+        .three-columns {
+            padding-top: 110px;
+            min-height: 800px;
+
+            .container-columns {
+                flex-wrap: nowrap;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .about-us {
+        .bg-photo {
+            .text-gradient {
+                .text {
+                    > p {
+                        font-size: 40px;
+                    }
+                    small {
+                        font-size: 19px;
+                    }
+                }
+            }
+        }
+        .white-text-section {
+            .container {
+                h1 {
+                    font-size: 30px;
+                }
+
+                .two-columns {
+                    flex-wrap: wrap;
+
+                    p + p {
+                        padding-top: 40px;
+                    }
+
+                    p:nth-child(2) { padding-left: 0 }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .about-us {
+        .leadership {
+            .container {
+                h1 {
+                    font-size: 35px;
+                    text-align: center;
+                }
+                .team {
+                    justify-content: center;
+                    
+                    .person {
+                        img {
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 450px) {
+    .about-us {
+        .three-columns {
+            .container-columns {
+                .column {
+
+                    & + .column {
+                        padding-top: 25px;
+                    }
+
+                    span {
+                        font-size: 24px;
+                    }
+                    p {
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+        .leadership {
+            .container {
+                .team {
+                    .person {
+                        .name-position {
+                            span {
+                                font-size: 17px;
+                            }
+                            small {
+                                font-size: 13px;
+                            }
                         }
                     }
                 }
