--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,3 @@
-// global //
-@import"global";
-//        //
-
 // variables //
 @import "variables";
 //          //
@@ -31,4 +27,9 @@
 @import 'experties';
 @import 'about-us';
 @import 'contacts';
+@import 'careers';
 //       //
+
+// global //
+@import"global";
+//        //
