--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -17,9 +17,21 @@ footer {
             div {
                 padding: 0 30px;
                 h2 {
-                    margin-bottom: 35px;
-                    font-size: 18px;
+                    margin-bottom: 10px;
+                    font-size: 15px;
                     font-family: 'Montserrat ExtraBold'
+                }
+                p { 
+                    font-size: 15px;
+                    line-height: 1.7;
+                    color: #424242;
+                    margin-bottom: 15px;
+                }
+                .list {
+                    color: #424242;
+                    li + li {
+                        margin-top: 30px;
+                    }
                 }
             }
     
@@ -27,67 +39,8 @@ footer {
                 height: 30px;
                 width: 140px;
             }
-    
-            .odessa {
-    
-                h2 {
-                    position: relative;
-    
-                    &::before {
-                        content: 'Ukrain';
-                        font-size: 15px;
-                        color: #9e9e9e;
-                        font-family: 'Proxima Nova';
-                        position: absolute;
-                        top: 22px;
-                    }
-                }
-    
-                .address {
-                    font-size: 15px;
-                    line-height: 1.7;
-                    color: #424242;
-                    margin-bottom: 15px;
-                }
-            }
-            .dublin {
-    
-                h2 {
-                    position: relative;
-    
-                    &::before {
-                        content: 'Ireland';
-                        font-size: 15px;
-                        color: #9e9e9e;
-                        font-family: 'Proxima Nova';
-                        position: absolute;
-                        top: 22px;
-                    }
-                }
-                .address {
-                    font-size: 15px;
-                    line-height: 1.7;
-                    color: #424242;
-                    margin-bottom: 15px;
-                }
-            }
-            .expertise {
-    
-                &-list {
-                    color: #424242;
-                    
-                    li + li {
-                        margin-top: 16px;
-                    }
-                }
-            }
             .company {
-                
-                &-list {
-                    color: #424242;
-                    li + li {
-                        margin-top: 16px;
-                    }
+                .list {
                 }
             }
         }
@@ -131,24 +84,29 @@ footer {
         .footer {
             .container {
                 display: grid;
-                grid-template-columns: minmax(200px, 370px) 1fr;
+                grid-template-columns: 1fr 1fr;
                 grid-template-rows: 1fr 1fr;
+                grid-row-gap: 25px;
+
+                div {
+                    padding: 0;
+
+                    &:nth-child(2) { justify-self: center; }
+                    &:nth-child(4) { justify-self: center; }
+                }
             }
         }
     }
 }
 
-@media only screen and (max-width: 510px) {
+@media only screen and (max-width: 520px) {
     footer {
         .footer {
             .container {
-                grid-template-columns: 1fr;
-                position: relative;
-                left: 50%;
-                transform: translateX(-28%);
-                
+                display: flex;
+                flex-direction: column;
+                width: 200px;                
                 div {
-                    padding: 0;
 
                     & + div {
                         margin-top: 30px;
@@ -158,3 +116,20 @@ footer {
         }
     }
 }
+
+@media only screen and (max-width: 400px) {
+    footer {
+        .bottom-page {
+            .container {
+                .social-network {
+                    img {
+                        width: 12px;
+                    }
+                }
+                span {
+                    font-size: 10px;
+                }
+            }
+        }
+    }
+} 
