--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -110,17 +110,18 @@
     }
   }
   .line {
-    width: 10000px;
+    width: 100vw;
     height: 1px;
     opacity: 0.08;
     background-color: #f5f5f5;
     position: absolute;
     top: 75px;
+    z-index: 999;
   }
 }
 
 .bg-neural {
-  background: black;
+    background: black;
   a {
     color: white;
 
@@ -145,7 +146,8 @@
   }
 }
 
-.bg-contacts {
+
+.bg-black {
   background: black;
   color: white;
 }
