--- a/src/styles/neural.scss
+++ b/src/styles/neural.scss
@@ -29,12 +29,21 @@
             }
             
             .right-text {
+                max-width: 440px;
                 height: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
 
                 .block-text {
+
+                    &:nth-child(1) { padding-bottom: 20px }
+                    &:nth-child(2) { 
+                        padding: 20px 0;
+                        border-top: solid 1px #212121; 
+                        border-bottom: solid 1px #212121; 
+                    }
+                    &:nth-child(3) { padding-top: 20px }
 
                     span {
                         font-size: 32px;
@@ -52,7 +61,7 @@
         }
     }
     .reviews-section {
-        height: 685px;
+        height: 519px;
         overflow: hidden;
         background-color: black;
         color: white;
@@ -76,6 +85,7 @@
                 transform: translateX(calc(50% + 215px));
                 z-index: 1;
                 color: #8478d2;
+                pointer-events: none;
             }
 
             .first-review,
@@ -83,7 +93,7 @@
             .third-review {
                 width: 100vw;
                 display: grid;
-                grid-template-columns: 1fr 1fr;
+                grid-template-columns: auto auto;
                 grid-column-gap: 145px;
 
                 .video-or-img {
@@ -91,29 +101,6 @@
                     transition: transform .3s;
                     z-index: 999;
 
-                        .show-testimonials {
-                            width: 220px;
-                            height: 45px;
-                            border: solid 1px #424242;
-                            background: transparent;
-                            outline: none;
-                            align-self: center;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            margin-left: auto;
-                            margin-top: 30px;
-
-                            span {
-                                color: white;
-                                font-size: 15px;
-                                font-weight: 500;
-                            }
-                            img {
-                                margin-left: 10px;
-                                transition: transform .4s;                                
-                            }
-                        }
                         > video {
                             width: 100%;
                             height: 578px;
@@ -126,7 +113,7 @@
                     align-self: center;
                     display: grid;
                     grid-template-rows: 1fr 1fr;
-                    grid-row-gap: 100px;
+                    grid-row-gap: 55px;
         
                     blockquote {
                         font-size: 24px;
@@ -146,6 +133,33 @@
                         .position {
                             font-size: 13px;
                             color: #9e9e9e;
+                        }
+                    }
+                    .show-testimonials {
+                        width: 220px;
+                        height: 45px;
+                        background: transparent;
+                        outline: none;
+                        align-self: center;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        margin-right: auto;
+                        border: double 2px transparent;
+                        border-radius: 80px;
+                        background-image: linear-gradient(black, black), radial-gradient(circle at top left, #7578e6,#d7775f);
+                        background-origin: border-box;
+                        background-clip: content-box, border-box;
+
+
+                        span {
+                            color: white;
+                            font-size: 15px;
+                            font-weight: 500;
+                        }
+                        img {
+                            margin-left: 10px;
+                            transition: transform .4s;                                
                         }
                     }
                 }
@@ -342,7 +356,9 @@
             padding-bottom: 120px;
             
             .container-description {
-                
+                > p {
+                    font-size: 50px;
+                }
             }
         }
     }
@@ -377,7 +393,9 @@
     .neural {
         .reviews-section {
             .container {
-
+                .bg-word-review {
+                    display: none;
+                }
                 .first-review,
                 .second-review,
                 .third-review {
@@ -398,19 +416,6 @@
     }
 }
 
-@media only screen and (max-width: 1100px) {
-    .neural {
-        .reviews-section {
-            .container {
-                .bg-word-review {
-                    display: none;
-                }
-            }
-        }
-    }
-}
-
-
 @media only screen and (max-width: 1000px) {
     .neural {
         .networks {
@@ -429,7 +434,8 @@
             .container-vacancies {
                 justify-content: center;
                 flex-wrap: wrap;
-        
+                
+
                 .vacancies {
                     margin-bottom: 60px;
                 }
@@ -461,10 +467,23 @@
         }
     }
 }
+
 @media only screen and (max-width: 900px) {
     .neural { 
+        .description-borvo {
+            .container-description {
+                width: 500px;
+                flex-direction: column;
+
+
+                > p {
+                    font-size: 45px;
+                    padding-bottom: 70px;
+                }
+            }
+        }
         .reviews-section {
-            height: 800px;
+            height: 820px;
 
             .container {
             
@@ -473,19 +492,22 @@
                 .third-review {
                     display: flex;
                     flex-direction: column;
-
+                    
                     .video-or-img {
                         > video {
                             width: 100%;
                             height: auto;
-                        }
-                        .show-testimonials {
-                            margin: auto;
-                            margin-bottom: 30px;
-                            margin-top: 30px;
+                        }                    
+                    }
+
+                    .feedback-text {
+                            padding-top: 50px;      
+                            
+                            .show-testimonials {
+                                margin: auto;
+                            }
                         }
                     }
-                }
                 .second-review,
                 .third-review {
                     .feedback-text {
@@ -513,7 +535,19 @@
 @media only screen and (max-width: 620px) {
     .neural {
         .reviews-section {
-            height: 700px;
+            height: 750px;
+        }
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .neural {
+        .description-borvo {
+            .container-description {
+                > p {
+                    font-size: 36px;
+                }
+            }
         }
     }
 }
