--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -9,13 +9,14 @@
         display: flex;
         align-items: center;
         line-height: 1;
-
+        position: relative;
+        
         .content {
             overflow: hidden;
             @include padding-both;
 
             video {
-                width: 1360px;
+                width: 100%;
                 border-radius: 10px;
                 opacity: .3;
                 margin-bottom: -5px;
@@ -32,9 +33,26 @@
 
             .text-about-work {
                 color: white;
+                position: relative;
+                @include padding-both;
+
+                .project {
+                    position: absolute;
+                    top: 0;
+                    left: -150px;
+                    border-style: solid;
+                    border-width: 2px;
+                    border-image-source: linear-gradient(109deg, #7878e5, #d07868);
+                    border-image-slice: 1;
+                    padding: 10px 25px;
+                    color: #a878a1;
+                    font-size: 24px;
+                    pointer-events: none;
+                }
 
                 span {
                     font-size: 24px;
+                    
                 }
     
                 h1 {
@@ -104,24 +122,13 @@
             }
         }
 }
-@media only screen and (max-width: 1450px){
-    .works {
-        .works-container {
-            .content {
-                video {
-                    width: 100%;
-                }
-            }
-        }
-    }
-}
+
 @media only screen and (max-width: 1260px){
     .works {
         .works-container {
             .bg-gradient {
                 .text-about-work {
                     h1 {
-                        // max-width: 580px;
                         font-size: 65px;
                     }
                 }
@@ -129,14 +136,57 @@
         }
     }
 }
-@media only screen and (max-height: 1000px) and (min-width: 1025px) {
+
+@media only screen and (max-width: 680px) {
     .works {
         .works-container {
             .content {
                 video {
-                    width: 1000px;
+                    opacity: 0;
                 }
             }
         }
     }
 }
+
+@media only screen and (max-width: 950px) {
+    .works {
+        .works-container {
+            .bg-gradient {
+                .text-about-work {
+                    .project {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .works {
+        .works-container {
+            .bg-gradient {
+                .text-about-work {
+                    span {
+                        font-size: 16px;
+                    }
+                    h1 {
+                        font-size: 48px;
+                    }
+                    div {
+                        a {
+                            font-size: 12px;
+
+                            span {
+                                width: 15px;
+                                height: 10px;
+                            }
+                        }
+                    } 
+                }
+            }
+        }
+    }
+}
+
