--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -4,6 +4,10 @@
 	src:  url('../../assets/fonts/ProximaNova-Regular.otf')
 }
 @font-face {
+	font-family: 'ProximaNova-Light';
+	src:  url('../../assets/fonts/ProximaNova-Light.otf')
+}
+@font-face {
 	font-family: 'ProximaNova-Extrabold';
 	src:  url('../../assets/fonts/ProximaNova-Extrabold.otf')
 }
