--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,9 @@
 @import "mixins";
 //        //
 
+// routing //
+@import 'container-careers-vacancies';
+//         //
 
 // elements of page //
 @import "header";
@@ -28,6 +31,7 @@
 @import 'about-us';
 @import 'contacts';
 @import 'careers';
+@import 'vacancies';
 //       //
 
 // global //
