--- a/src/styles/careers.scss
+++ b/src/styles/careers.scss
@@ -57,7 +57,13 @@
                 padding: 30px 0 ;
                 padding-right: 30px;
                 padding-left: 40px;
+                text-decoration: none;
+                color: black;
 
+                &:hover {
+                    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.16);
+                    color: $lightblue;
+                }
 
                 .location {
                     display: flex;
