--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -2,8 +2,6 @@
     .map-bg {
         width: 100%;
         height: 760px;
-        background: url('../../assets/img/map.svg') no-repeat center center;
-        background-size: contain;
         background-color: black;
         display: flex;
         justify-content: center;
@@ -12,6 +10,8 @@
         .container {
             width: 1360px;
             height: 590px;
+            background: url('../../assets/img/map.svg') no-repeat center center;
+            background-size: contain;
             color: white;
             display: flex;
             flex-direction: column;
@@ -126,11 +126,16 @@
                                     color: transparent;
                                 }
                             }
-            
+                            
                             .placeholder {
                                 position: absolute;
                                 left: 0;
                                 bottom: 15px;
+                            }
+                            
+                            [data-end]::after {
+                                content: attr(data-end);
+                                color: $lightblue;
                             }
                         }
                     }
