--- a/src/styles/get-in-touch.scss
+++ b/src/styles/get-in-touch.scss
@@ -65,6 +65,10 @@
                             left: 0;
                             bottom: 15px;
                         }
+                        [data-end]::after {
+                            content: attr(data-end);
+                            color: $lightblue;
+                        }
                     }
                 }
                 .down-input {
@@ -93,6 +97,7 @@
                             position: absolute;
                             left: 0;
                             bottom: 15px;
+
                         }
                     }
                     .style-type-file {
