--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
   padding-right: 25px;
   padding-left: 25px;
   overflow-y: hidden;
@@ -11,6 +10,8 @@
     width: 1360px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    line-height: 2.4;
 
     & > * {
       z-index: 1;
@@ -24,7 +25,8 @@
         text-decoration: none;
         color: white;
         margin-right: 54px;
-        
+
+
         .logo {
           font-family: 'ProximaNova-Extrabold';
           font-size: 32px;
@@ -35,7 +37,7 @@
             content: url('../../assets/img/borvo-logo-white.svg');
             position: absolute;
             left: -40px;
-            top: 0px;
+            top: -16px;
           }
         }
       }
@@ -54,6 +56,24 @@
             a {
               color: white;
               text-decoration: none;
+              transition: color .2s;
+              position: relative;
+
+
+              span {
+                width: 100%;
+                height: 2px;
+                background-color: $lightblue;
+                position: absolute;
+                top: 43px;
+                left: 0;
+                display: none;
+              }
+
+              &:hover {
+                color: $lightblue;
+                transition: color .2s;
+              }
             }
           }
         }
@@ -110,13 +130,13 @@
     }
   }
   .line {
-    width: 100vw;
+    width: 250vw;
     height: 1px;
     opacity: 0.08;
     background-color: #f5f5f5;
     position: absolute;
     top: 75px;
-    z-index: 999;
+    z-index: 5;
   }
 }
 
@@ -141,7 +161,6 @@
 .bg-about-us {
   .line {
     background: white;
-    opacity: 0.3;
     z-index: 999;
   }
 }
@@ -187,8 +206,6 @@
 @media only screen and (max-width: 768px){ // for mobile
   .header {
     &-container {
-      height: 30px;
-
       div {
         >nav {
           display: none;
