--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -17,9 +17,10 @@
             flex-direction: column;
             font-size: 20px;
             padding: 0 20px;
+            flex: 1 1 290px;
             
             > img {
-                width: 290px
+                width: 100%
             }
             > span {
                 margin-top: 50px;
@@ -29,15 +30,6 @@
     }
 }
 
-@media only screen and (max-width: 1729px) {
-    .section-services {
-        .cards-services {
-            .card-services {
-
-            }
-        }
-    }
-}
 @media only screen and (max-width: 768px) {
     .section-services {
         .cards-services {
@@ -56,15 +48,7 @@
             padding-right: 30px;
             .card-services {
                 width: auto;
-                img {
-                    width: 100%;
-                }
             }
         }
     }
 }
-// @media only screen and (max-height: 750px) { //height media 
-//     .section-services {
-//       padding-top: 25%;
-//     }
-//   }
