--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     line-height: 2.4;
+    z-index: 5;
 
     & > * {
       z-index: 1;
@@ -167,7 +168,7 @@
 
 
 .bg-black {
-  background: black;
+  background-color: $bgColor;
   color: white;
 }
 
