--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -50,6 +50,8 @@ footer {
         justify-content: center;
         border-top: 1px solid #f5f5f5;
         padding-top: 10px;
+        padding-bottom: 5px;
+
         .container {
             width: 1360px;
             display: flex;
