--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,3 +18,15 @@
 .scroll-x-hidden {
     overflow-x: hidden !important; 
 }
+.add-opacity-zero {
+    opacity: 0 !important;
+    transition: opacity .5s !important;
+}
+.open-pop-up {
+    position: fixed;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+}
+.switch-color {
+    color: black !important;   
+}
