--- a/src/styles/vacancies.scss
+++ b/src/styles/vacancies.scss
@@ -1,6 +1,6 @@
 .vacancies {
     .top-block {
-        background: black;
+        background-color: $bgColor;
         color: white;
         display: flex;
         justify-content: center;
