--- a/src/styles/AI.scss
+++ b/src/styles/AI.scss
@@ -7,6 +7,7 @@
     position: relative;
     pointer-events: none;
     padding-left: 50px;
+    z-index: 3;
 
    &-container{
        width: 1360px;
