--- a/src/styles/careers.scss
+++ b/src/styles/careers.scss
@@ -6,9 +6,9 @@
         justify-content: center;
         padding-top: 110px;
         padding-bottom: 110px;
-        background: url('../../assets/img/careers-top-page.png') no-repeat;
-        background-position: right bottom;
-        background-size: 800px;
+        background: url('../../assets/img/death-star.png') no-repeat;
+        background-position: 85% 50%;
+        background-size: 481px;
         background-color: $bgColor;
         
         .container {
@@ -97,7 +97,7 @@
 @media only screen and (max-width: 1800px) {
     .careers {
         .top-page {
-            background-size: 700px;
+            background-size: 400px;
             .container {
                 .text {
                     h1 {
@@ -115,7 +115,6 @@
 @media only screen and (max-width: 1470px) {
     .careers {
         .top-page {
-            background-size: 600px;
             .container {
                 .text {
                     h1 {
