--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -11,6 +11,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        z-index: 8;
 
         .card-services {
             display: flex;
@@ -19,12 +20,27 @@
             padding: 0 20px;
             flex: 1 1 290px;
             
+            &:last-child {
+                display: none;
+            }
+
             > img {
                 width: 100%
             }
             > span {
                 margin-top: 50px;
                 margin-bottom: 50px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1395px) {
+    .section-services {
+        .cards-services {
+            .card-services:last-child {
+                opacity: 0;
+                display: block;
             }
         }
     }
